2025-03-22  Araki Ken  <arakiken@users.sf.net>

	* ui_screen_manager.c: Fix compiling error.

	* bl_file.c, test.c: Add TEST_bl_file().

	* ci.yml: Add --enable-debug to ./configure in build-mingw.

2025-03-20  Araki Ken  <arakiken@users.sf.net>

	* configure.in, bl_config.h.in: Remove HAVE_GNU_SOURCE.

2025-03-20  Araki Ken  <arakiken@users.sf.net>

	* configure.in: Add -D_GNU_SOURCE to CFLAGS if glibc is installed.

2025-03-16  Araki Ken  <arakiken@users.sf.net>

	* configure.in: Add -lfontconfig and -lfreetype to XFT_LIBS.

2025-03-16  Araki Ken  <arakiken@users.sf.net>

	* ui_picture.c: Move "#undef HAVE_WINDOWS_H" first.

	* configure.in: Add -lfontconfig and -lfreetype to CAIRO_LIBS.

	* vt_pty_ssh.c: Include <pobl/bl_locale.h> after including
	  "libptyssh/vt_pty_ssh.c" to fix compiling error in mingw.

2025-03-15  Araki Ken  <arakiken@users.sf.net>

	* libptyssh/vt_pty_ssh.c: Define USE_LARGEFILE_FLAGS before including
	  <pobl/bl_def.h>.

	* bl_config.h.in: _FILE_OFFSET_BITS and _LARGE_FILES macros are defined
	  only if USE_LARGE_FILE_FLAGS is defined.

	* mlcc/main.c, mlfc/main.c: #ifdef __sunos -> #if defined(__sunos) || defined(__sun)

	* vt_char.c: Remove return for functions which do not return values.

	* libind/Makefile: Add $(TBL_OBJ) to all: target.

2025-03-13  Araki Ken  <arakiken@users.sf.net>

	* bl_map.h: Add bl_hash_func_t with the use of typeof.

	* bl_config.h: Add HAVE_TYPEOF and typeof.

	* configure.in, baselib/configure.in: Add AC_C_TYPEOF.

2025-03-10  Araki Ken  <arakiken@users.sf.net>

	* configure.in: Copy contrib/icon to gui/*/contrib/icon for win32 or sdl2/win32.

2025-03-09  Araki Ken  <arakiken@users.sf.net>

	* bl_path.h: Include <winnls.h> for IsDBCSLeadByte().

	* ci.yml: --with-gui=win32 -> --with-gui=win32,sdl2 in build-mingw.

	* ui_screen.c: Fix compiling error in sdl2/win32.

	* README, doc/en/README.{console|sdl2|win32}, doc/ja/README.win32,
	  PLATFORMS.old: Updated.
